add position (relative, absolute)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,45 @@
 		<section>
 			<h2>TRENDING</h2>
 		</section>
-		<section-1>
+		<section class="section1">
+			<div class="relative-base">
+				<img src="images/base.jpg" alt="base"> 
+				<h3 class="absolute-base">dolore magna aliqua</h3>
+			</div>
+			<div class="relative-base">
+				<img src="images/base2.jpg" alt="base2">
+				<h3 class="absolute-base">morbi eleifend a libero</h3>
+			</div>
+			<div class="relative-base">
+				<img src="images/base3.jpg" alt="base3">
+				<h3 class="absolute-base">morbi eleifend a libero</h3>
+			</div>
 			
-		</section-1>
+		</section>
+		<section>
+			<h2>HAPPENING NOW</h2>
+		</section>
+		<section class="section1">
+			<div class="left-block">
+				<div class="relative-base">
+					<img src="images/image1.jpg" alt="image1">
+					<h4>red bridge</h4>
+				</div>
+				<div>
+					<img style="margin-top: 20px;" src="images/image2.jpg" alt="image2">
+				</div>
+			</div>
+			<div class="right-block">
+				<div>
+					<img src="images/photo1.jpg" alt="photo1">
+					<img src="images/photo2.jpg" alt="photo2">
+					<img src="images/photo3.jpg" alt="photo3">
+				</div>
+			</div>
+		</section>
+		<footer class="footer">
+			<img src="images/logo.jpg">
+		</footer>
+		
 	</body>
 </html>
