add background color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body class="background">
 		<header>
 			<a class="logo" href="#">LOGO</a>
 			<nav class="nav-a">
@@ -36,14 +36,17 @@
 			<div class="relative-base">
 				<img src="images/base.jpg" alt="base"> 
 				<h3 class="absolute-base">dolore magna aliqua</h3>
+				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
 			<div class="relative-base">
 				<img src="images/base2.jpg" alt="base2">
 				<h3 class="absolute-base">morbi eleifend a libero</h3>
+				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
 			<div class="relative-base">
 				<img src="images/base3.jpg" alt="base3">
 				<h3 class="absolute-base">morbi eleifend a libero</h3>
+				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
 			
 		</section>
@@ -68,8 +71,8 @@
 				</div>
 			</div>
 		</section>
-		<footer class="footer">
-			<img src="images/logo.jpg">
+		<footer>
+			
 		</footer>
 		
 	</body>
