--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 		</section>
 		<section class="section1">
 			<div class="relative-base">
-				<img src="images/Base.jpg" alt="base"> 
+				<img src="images/photo1.jpg" alt="base"> 
 				<h3 class="absolute-base">dolore magna aliqua</h3>
 				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
 			<div class="relative-base">
-				<img src="images/Base2.jpg" alt="base2">
+				<img src="images/photo1.jpg" alt="base2">
 				<h3 class="absolute-base">morbi eleifend a libero</h3>
 				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
 			<div class="relative-base">
-				<img src="images/Base3.jpg" alt="base3">
+				<img src="images/photo1.jpg" alt="base3">
 				<h3 class="absolute-base">morbi eleifend a libero</h3>
 				<p>lorem ipsun dolor sit amet, ipsun labitur li</p>
 			</div>
